--- a/calculatorNew.html
+++ b/calculatorNew.html
@@ -10,7 +10,7 @@
       online calculator
     </h1>
     <h2>
-        By:- Tech Projects
+        By:-SOUMYA
     </h2>
 
       </div>
@@ -29,15 +29,15 @@
 
 <input type="button"  class= "operator"value="/" onclick="form1.answer.value+='/'">
 <br></br>
-<input type="button" class= "button" value="7" onclick="form1.answer.value+='7'">
-<input type="button"  class= "button"value="8" onclick="form1.answer.value+='8'">
+<input type="button" class= "button" value="8" onclick="form1.answer.value+='8'">
+<input type="button"  class= "button"value="9" onclick="form1.answer.value+='9'">
 <input type="button"  class= "button"value="9" onclick="form1.answer.value+='9'">
 
 <input type="button"  class= "operator"value="*" onclick="form1.answer.value+='*'">
 <br></br>
 
 
-<input type="button" class= "button" value="4" onclick="form1.answer.value+='4'">
+<input type="button" class= "button" value="5" onclick="form1.answer.value+='5'">
 <input type="button"  class= "button"value="5" onclick="form1.answer.value+='5'">
 
 <input type="button"  class= "button"value="6" onclick="form1.answer.value+='6'">
